[Java 17] Update src/main/java/com/example/java8/memory/PermGenMemoryManager.java from Jira ticket JAVA-124
- Timestamp: 2024-12-05 17:01:02
- Source: Jira code review
- Ticket: JAVA-124
- File: src/main/java/com/example/java8/memory/PermGenMemoryManager.java
- Branch: testing
- Type: Java 17 conversion